Fix for a few cases where the layout was still wrong and too small. Every width now displays the buttons below the 2 inputs

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_admin_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_admin_default.less
@@ -515,17 +515,18 @@ ul.gn-resultview li.list-group-item {
         margin-bottom: 10px;
         border-color: #ccc;
       }
-      .col-md-4, .col-md-6 {
+      .col-lg-4, .col-md-6 {
         @media (max-width: @screen-sm-max) {
           padding-right: 0 !important;
         }
       }
-      .col-lg-6, #gn-uiconfig-customize {
-        @media (max-width: 1024px) {
+      .col-md-12, #gn-uiconfig-customize {
+        //@media (max-width: 1240px) {
           padding-right: 0 !important;
           margin-bottom: @gn-spacing;
-        }
+        //}
       }
+
 
       // checkbox (Bootstrap 5.2)
       input[type="checkbox"],
